src/test/deca/context/invalid/resultats/test_LT_class-cont.res
./src/test/deca/context/invalid/test_LT_class.deca:23:15: The types are incompatible for a Inequality Operation
